Changelog
=========

1.0b5 - Unreleased
------------------


1.0b4 - Released February 17, 2010
----------------------------------

* Register all ordering adapter by default now that they can co-exist.
  [witsch]

* Add `__getitem__` support to the default ordering adapter to help
  previous/next support in `plone.app.folder`.
  [witsch]


1.0b3 - Released February 9, 2010
---------------------------------

* Make sure order changes are persisted when using the partial ordering
  adapter.
  [hannosch, witsch]


1.0b2 - Released January 28, 2010
---------------------------------

* Make the dependency on `Products.CMFCore` a soft one.
  [witsch]

* Added an 'unordered' adapter which can be used when no explicit ordering
  is needed.
  [davisagli]

* Allow the use of different named adapters to ``IOrdering``, with the name
  determined by the folder's ``_ordering`` attribute.
  [davisagli]


1.0b1 - Released October 10, 2009
---------------------------------

* Fix the WebDAV content creation process by properly returning a
  ``NullResource`` when required.
  [optilude]


1.0a3 - Released May 11, 2009
-----------------------------

* Let ``objectIds`` always return all object ids, even with partial ordering.
  [witsch]


1.0a2 - Released May 7, 2009
----------------------------

* Fix a bug in the default ordering that would cause the ``pos`` dict to get
  out of sync when an item is deleted.
  [optilude]

* Declare ``IContainer`` support.
  [optilude]

* Properly set ``__parent__`` and ``__name__`` for ``IContained`` in
  ``_setOb()``.
  [optilude]

* Add ``__getitem__``, needed when not using the CMF mix-in.
  [optilude]

* Added ``__setitem__``, ``__contains__`` and ``__delitem__`` to support a
  dict-like API.
  [optilude]

* Fix issue with removing non-orderable content for partial ordering suppport.
  [witsch]

* Fix ``getObjectPosition`` to return a value representing "no position" for
  non-orderable content instead of raising an error.
  [witsch]
